--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -2,6 +2,9 @@
     height: 54px;
     background-color: white;
     border-bottom: 1px solid #dbdbdb;
+    /* position: fixed;
+    width: 100%;
+    z-index: 999; */
 }
 
 .appName {
