--- a/src/Components/SuggestionComp/SuggestionComp.css
+++ b/src/Components/SuggestionComp/SuggestionComp.css
@@ -1,6 +1,7 @@
 .SuggestionCompCard {
     display: flex;
-    margin-top: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .SuggestionCompCardAvatar {
