--- a/src/css/colours.css
+++ b/src/css/colours.css
@@ -1,5 +1,5 @@
 :root{
-    --light-bkue: #2fb3e1;
+    --light-blue: #2fb3e1;
     --bg: #f5f9fc;
     --bg-icons: #113186;
     --bg-posts: 176cd7;
