--- a/src/css/Feed.css
+++ b/src/css/Feed.css
@@ -1,3 +1,34 @@
-body{
-    background-color: #fafafa;
+@import url("./colours.css");
+
+.feed-wrapper{
+    height: 100vh;
+    width: 100%;
+    display: flex;
+}
+
+.left-section{
+    height: 100vh;
+    max-width: 300px;
+    width: 100%;
+    background-color: var(--bg);
+    padding-top: 80px;
+    position: fixed;
+}
+.feed{
+    height: 100vh;
+    background-color: red;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding-top: 80px;
+}
+.profile-section{
+    height: 100vh;
+    max-width: 350px;
+    width: 100%;
+    background-color: yellow;
+    display: flex;
+    justify-content: flex-end;
+    position: fixed;
+    right: 0;
 }
