--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -7,7 +7,8 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    width: 75%;
+    width: 77.25%;
+    position: fixed;
 }
 
 /* Seacrh bar */
