--- a/src/css/Feed.css
+++ b/src/css/Feed.css
@@ -16,7 +16,7 @@
 }
 .feed{
     height: 100vh;
-    background-color: red;
+    background-color: var(--white);
     width: 100%;
     display: flex;
     justify-content: center;
@@ -26,7 +26,7 @@
     height: 100vh;
     max-width: 350px;
     width: 100%;
-    background-color: yellow;
+    background-color: var(--bg);
     display: flex;
     justify-content: flex-end;
     position: fixed;
