--- a/src/css/Feed.css
+++ b/src/css/Feed.css
@@ -28,7 +28,7 @@
     width: 100%;
     background-color: var(--bg);
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     position: fixed;
     right: 0;
 }
