post feed eklendi. Post status eklendi. Post ımage ayarlandı

--- a/src/css/stories.css
+++ b/src/css/stories.css
@@ -1,7 +1,9 @@
 @import url("./colours.css");
 
 .stories-wrapper{
-    height: 110px;
+    min-height: 125px;
+    max-height: 150px;
+    height: 100%;
     width: 100%;
     background-color: var(--white);
     padding-left: 300px;
