--- a/src/css/Feed.css
+++ b/src/css/Feed.css
@@ -19,7 +19,8 @@
     background-color: var(--white);
     width: 100%;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     padding-top: 80px;
 }
 .profile-section{
