--- a/src/css/profile.css
+++ b/src/css/profile.css
@@ -15,6 +15,16 @@
   display: flex;
   justify-content: center;
 }
+
+.datas{
+    display: flex;
+    justify-content: space-around;
+}
+.data{
+    color: var(--light-blue);
+    margin-bottom: .5rem;
+    margin-top: .5rem;
+}
 #pp {
   height: 125px;
   margin-top: 1rem;
