--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,9 +1,10 @@
 @import url("./colours.css");
 
 .icon{
-    height: 30px;
-    padding: .25rem;
+    height: 40px;
+    padding: .5rem;
     cursor: pointer;
+    font-size: 1.25rem;
 }
 a{
     text-decoration: none;
@@ -22,6 +23,7 @@ a{
 /* Select icon */
 .active{
     background-color: var(--bg-icons);
+    color: #fff;
     border-radius: 5px;
 }
 
