--- a/src/css/global.css
+++ b/src/css/global.css
@@ -31,3 +31,24 @@ a{
 .feed-content{
     padding: 2rem;
 }
+
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: none; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background-color: var(--light-blue); 
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: var(--bg-posts); 
+  }
