--- a/src/css/stories.css
+++ b/src/css/stories.css
@@ -32,9 +32,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-self: center;
 }
 .story-image{
     height: 60px;
+    border-radius: 10px;
 }
 .story-user-name{
     margin-top: .25rem;
