--- a/src/css/posts.css
+++ b/src/css/posts.css
@@ -62,6 +62,11 @@
     font-size: 1.25rem;
 }
 
+.action-icon:hover{
+    cursor: pointer;
+
+}
+
 
 #option-user-name{
     margin-left: 0;
@@ -70,4 +75,39 @@
 
 .texts{
     display: flex;
+}
+
+.comment-wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+#comment-input{
+    width: 100%;
+    padding: .5rem .5rem;
+    border-radius: 5px;
+    border: 1px solid transparent;
+    color: rgba(0, 0, 0, 0.7);
+    margin-right: 1rem;
+}
+#comment-input:focus{
+    outline: none;
+    border: 1px solid var(--light-blue);
+}
+#tag-send-button{
+    margin-right: 1rem;
+    color: var(--bg-icons);
+    font-size: 1.5rem;
+}
+
+#tag-send-button:hover{
+    cursor: pointer;
+    color: rgba(0, 0, 0, 0.7);
+}
+#tag-button{
+    background-color: transparent;
+    border: 1px solid transparent;
+    display: flex;
+    align-items: center;
 }
